Replace double brace initialization with Map.of
  + Introduced in Java 9